[gd_scene load_steps=7 format=3 uid="uid://blitqhevukcdw"]

[ext_resource type="Script" path="res://main.gd" id="1_ukot8"]
[ext_resource type="PackedScene" uid="uid://cyn8ppc3bmurf" path="res://player.tscn" id="2_abti5"]
[ext_resource type="PackedScene" uid="uid://1a0th4nup6l" path="res://pipe.tscn" id="3_dok6y"]
[ext_resource type="Texture2D" uid="uid://cx3osqhgcjfkq" path="res://art/Sky.png" id="4_cldch"]
[ext_resource type="Texture2D" uid="uid://bnlds026oi0u2" path="res://art/Ground.png" id="5_k2iws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4ta2"]
size = Vector2(1600.5, 138)

[node name="Main" type="Node2D"]
script = ExtResource("1_ukot8")
player_scene = ExtResource("2_abti5")
pipe_scene = ExtResource("3_dok6y")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1600.0
offset_bottom = 900.0
texture = ExtResource("4_cldch")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(400, 450)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1622, 802)

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="Ground" type="CollisionShape2D" parent="Boundary"]
position = Vector2(800.25, 881)
shape = SubResource("RectangleShape2D_h4ta2")

[node name="GroundSprite" type="Sprite2D" parent="Boundary"]
z_index = 2
texture_filter = 1
position = Vector2(1800, 875)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_k2iws")

[node name="Sky" type="CollisionShape2D" parent="Boundary"]
position = Vector2(800, -69)
shape = SubResource("RectangleShape2D_h4ta2")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
